<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/imgLogo"
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="140dp"
            android:background="@drawable/logotext" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:layout_marginBottom="50dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:inputType="text"
            android:autofillHints="@string/username"
            android:layout_below="@id/tvWelcome"
            android:id="@+id/etUsername"
            android:hint="@string/username"
            android:drawableStart="@drawable/ic_person"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:autofillHints="@string/password"
            android:layout_below="@id/etUsername"
            android:inputType="textPassword"
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_lock"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_sign_in" />

        <TextView
            android:id="@+id/tvcrateAccount"
            android:layout_below="@id/btnLogin"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/create_a_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </RelativeLayout>

</LinearLayout>